# brotli

./: .gitignore  Cargo.toml  README.md  brotli.rsproj  brotli.sln
src/: bitreader.rs  context.rs  decoder.rs  dictionary.rs  huffman.rs  lib.rs  prefix.rs  transforms.rs
tests/: lib.rs
